fix: blank space create by link wrap (NGEN-116)

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,6 +34,10 @@ a {
     }
 }
 
+.is-wrap-link {
+    position: relative;
+}
+
 .grid-item {
     @include utils.grid;
 }
