--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -97,9 +97,6 @@
     padding-right: 0;
     padding-top: 0;
 
-    /* .item {
-        width: 100%;
-    } */
     .item {
         margin-left: 3.1830914184%;
         margin-right: 3.1830914184%;
